[tool.poetry]
name = "r"
version = "0.1.0"
description = "A react style gui framework in python."
authors = ["Zomatree <me@zomatree.live>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportImportCycles = "none"
