[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kine"
description = 'A react style gui framework in python'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Zomatree", email = "me@zomatree.live" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "aiohttp==3.8.3",
  "toml==0.10.2",
  "typing_extensions==4.4.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Zomatree/kine#readme"
Issues = "https://github.com/Zomatree/kine/issues"
Source = "https://github.com/Zomatree/kine"

[tool.hatch.version]
path = "kine/__init__.py"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportImportCycles = "none"

[tool.black]
line-length = 120
target-version = ["py311"]
