[project]
name = "kine"
version = "0.0.1"
description = 'A react style gui framework in python'
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Zomatree", email = "me@zomatree.live" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "aiohttp==3.8.4",
  "toml==0.10.2",
  "typing_extensions==4.5.0",
  "pipdeptree==2.3.3",
  "msgpack==1.0.5",
  "click==8.1.3",
  "aiohttp_cors==0.7.0"
]

[project.urls]
Documentation = "https://github.com/Zomatree/kine#readme"
Issues = "https://github.com/Zomatree/kine/issues"
Source = "https://github.com/Zomatree/kine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportImportCycles = "none"
reportMissingTypeStubs = "none"
reportMissingModuleSource = "none"
reportWildcardImportFromLibrary = "none"

[tool.black]
line-length = 120
target-version = ["py311"]
